--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MyApplicationCocktail</string>
+    <string name="favName">My Favorites</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="web_service_url">https://www.thecocktaildb.com/api/json/v1/1/filter.php?</string>
